2007-06-29  Paolo Borelli  <pborelli@katamail.com>

	* gedit-commands-file.c:
	* gedit/gedit-window.[ch]:

	Reimplement differently the persistance of the default path
	of the filechooser that was broken by the removal of 
	"document->priv->is_saving_as".

2007-06-29  Steve Frécinaux  <code@istique.net>

	* docs/reference/tmpl/gedit-document.sgml:
	* gedit/gedit-document.c:
	* gedit/gedit-document.h:
	* gedit/gedit-marshal.list:
	* gedit/gedit-window.c:

	Implement Save and Save As as operations of GeditDocument as the
	default handler of a "save" signal.
	Also kill "document->priv->is_saving_as" and write some related bits
	of developper documentation.

2007-06-28  Changwoo Ryu  <cwryu@debian.org>

	* configure.ac: Removed help/ko/Makefile for gnome-doc-utils
	migration.

2007-06-28  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-file-chooser-dialog.c
	* gedit/gedit-language-manager.c:
	* gedit/gedit-window.c:

	Adapt to gtksourceview changes.

2007-06-27  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-source-style-manager.c: do not unref style
	old scheme when changing default scheme.

2007-06-26  Paolo Borelli  <pborelli@katamail.com>

	* plugins/externaltools/data/build.tool.in: also try
	GNUmakefile and makefile and handle spaces in directory names.

2007-06-25  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-commands-file.c: remove stray comma in
	error message. Patch by Joachim Noreiko.

2007-06-25  Paolo Borelli  <pborelli@katamail.com>

	* plugins/filebrowser/gedit-file-browser-plugin.c: fix a typo.
	patch by Thierry Moisan.
	* gedit/gedit-ui.h: capitalization and Mnemonic fix for
	the incremental search menu item. Patch by Dennis Cranston.
	* gedit/gedit-commands-file.c: remove '...' from dialog title

=== gedit 2.19.1 ===

2007-06-25  Paolo Borelli  <pborelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:

	gedit 2.19.1 released

2007-06-24  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-language-manager.[ch]: rename 